hello-kubernetes-istio/k8s/deployment-istio-multiple.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: hello-kubernetes
    version: v1
  name: hello-kubernetes-v1
  namespace: default
spec:
  replicas: 2
  # older pods are delete after giving 40 seconds to new pods to be actually running the spring service
  minReadySeconds: 25
  selector:
    matchLabels:
      app: hello-kubernetes
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello-kubernetes
        version: v1
    spec:
      containers:
      - image: kbhatt23/hello-kubernetes:0.0.5
        imagePullPolicy: IfNotPresent
        name: hello-kubernetes
        ports:
        - name: liveness-port
          containerPort: 8089
          hostPort: 8089
        readinessProbe:
          httpGet:
            path: /
            port: liveness-port
          failureThreshold: 1
          periodSeconds: 10
          initialDelaySeconds: 30
        livenessProbe:
          httpGet:
            path: /
            port: liveness-port
          failureThreshold: 3
          periodSeconds: 10
          initialDelaySeconds: 30  
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: hello-kubernetes
    version: v2
  name: hello-kubernetes-v2
  namespace: default
spec:
  replicas: 2
  # older pods are delete after giving 40 seconds to new pods to be actually running the spring service
  minReadySeconds: 25
  selector:
    matchLabels:
      app: hello-kubernetes
      version: v2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello-kubernetes
        version: v2
    spec:
      containers:
      - image: kbhatt23/hello-kubernetes:0.0.6
        imagePullPolicy: IfNotPresent
        name: hello-kubernetes
        ports:
        - name: liveness-port
          containerPort: 8089
          hostPort: 8088
        readinessProbe:
          httpGet:
            path: /
            port: liveness-port
          failureThreshold: 1
          periodSeconds: 10
          initialDelaySeconds: 30
        livenessProbe:
          httpGet:
            path: /
            port: liveness-port
          failureThreshold: 3
          periodSeconds: 10
          initialDelaySeconds: 30  
      restartPolicy: Always
      terminationGracePeriodSeconds: 30 
      
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-kubernetes
  name: hello-kubernetes
  namespace: default
spec:
  #type: LoadBalancer
  ports:
  - port: 8089
    protocol: TCP
  selector:
    app: hello-kubernetes
