hello-kubernetes-istio/k8s/03-creating-virtualservice-external.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-kubernetes
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway                      # 1
  http:
  - match:
    - uri:
        prefix: /hello-kubernetes
    route:
    - destination:
        host: hello-kubernetes             # 2
        port:
          number: 8089
